<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="hr.foi.air.solex.activities.companies.CompanyProfileActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>


        <ScrollView
            android:id="@+id/activity_company_profile_scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="55dp">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_company_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="hr.foi.air.solex.activities.companies.CompanyProfileActivity">

                <Button
                    android:id="@+id/btnStartUpdateCompanyData"
                    style="@style/ButtonStyleBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_alignEnd="@+id/activity_company_profile_projectsLayout"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="45dp"
                    android:text="@string/update" />

                <ImageView
                    android:id="@+id/activity_collaboration_imvDeveloper"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    app:srcCompat="@drawable/company_logo" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="33dp"
                    android:layout_toEndOf="@+id/activity_collaboration_imvDeveloper"
                    android:text="@string/company_name" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/textView"
                    android:layout_below="@+id/textView"
                    android:layout_marginTop="17dp"
                    android:text="@string/e_mail_contact" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/textView2"
                    android:layout_below="@+id/textView2"
                    android:layout_marginTop="21dp"
                    android:text="@string/address" />

                <View
                    android:id="@+id/horizontalBarView"
                    android:layout_width="fill_parent"
                    android:layout_height="2dip"
                    android:layout_below="@+id/activity_collaboration_imvDeveloper"
                    android:background="#55555555" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/horizontalBarView"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="43dp"
                    android:text="@string/highlighted_projects"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/horizontalBarView2"
                    android:layout_width="match_parent"
                    android:layout_height="2dip"
                    android:layout_below="@+id/activity_company_profile_btnToggleProjectsLayout"
                    android:background="#55555555" />

                <ImageButton
                    android:id="@+id/activity_company_profile_btnToggleProjectsLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/horizontalBarView"
                    android:layout_below="@+id/horizontalBarView"
                    android:layout_marginTop="35dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/lblue_collapse_img"
                    android:tag="gray_expand_img" />

                <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                    android:id="@+id/activity_company_profile_projectsLayout"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/horizontalBarView2"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="8dp"
                    app:ael_expanded="true">

                    <ListView
                        android:id="@+id/activity_company_profile_lvHighProjects"
                        android:layout_width="match_parent"
                        android:layout_height="200dp" />

                </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/activity_company_profile_projectsLayout"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/general_information"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/activity_company_profile_btnToggleGenInfoLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textView5"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="16dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/lblue_expand_img"
                    android:backgroundTint="@color/colorPrimary"
                    android:tag="gray_expand_img" />

                <View
                    android:id="@+id/horizontalBarView3"
                    android:layout_width="match_parent"
                    android:layout_height="2dip"
                    android:layout_below="@+id/activity_company_profile_btnToggleGenInfoLayout"
                    android:background="#55555555" />

                <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                    android:id="@+id/activity_company_profile_generalInfoLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/horizontalBarView3"
                    android:paddingStart="24dp">

                    <TextView
                        android:id="@+id/activity_company_profile_tvsWebPage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comp_web_page" />

                    <TextView
                        android:id="@+id/activity_company_profile_tvWebPage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/activity_company_profile_tvsWebPage"
                        android:layout_marginStart="20dp"
                        android:lines="2" />

                    <TextView
                        android:id="@+id/activity_company_profile_tvsDirector"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/activity_company_profile_tvWebPage"
                        android:text="@string/comp_director" />

                    <TextView
                        android:id="@+id/activity_company_profile_tvDirector"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/activity_company_profile_tvWebPage"
                        android:layout_marginStart="2dp"
                        android:layout_toEndOf="@+id/activity_company_profile_tvsDirector" />

                    <TextView
                        android:id="@+id/activity_company_profile_tvsNumberEmployees"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/activity_company_profile_tvDirector"
                        android:text="@string/comp_num_employees" />

                    <TextView
                        android:id="@+id/activity_company_profile_tvNumberEmployees"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/activity_company_profile_tvDirector"
                        android:layout_marginStart="6dp"
                        android:layout_toEndOf="@+id/activity_company_profile_tvsNumberEmployees" />

                </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/activity_company_profile_generalInfoLayout"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="33dp"
                    android:text="@string/main_technologies"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/horizontalBarView4"
                    android:layout_width="match_parent"
                    android:layout_height="2dip"
                    android:layout_below="@+id/activity_company_profile_btnToggleMainTechLayout"
                    android:background="#55555555" />


                <ImageButton
                    android:id="@+id/activity_company_profile_btnToggleMainTechLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/horizontalBarView3"
                    android:layout_below="@+id/activity_company_profile_generalInfoLayout"
                    android:layout_marginTop="25dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/lblue_expand_img"
                    android:backgroundTint="@color/colorPrimary"
                    android:tag="gray_expand_img" />


                <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                    android:id="@+id/activity_company_profile_mainTechLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/horizontalBarView4"
                    android:padding="20dp">

                    <ListView
                        android:id="@+id/activity_company_profile_lvMainTech"
                        android:layout_width="match_parent"
                        android:layout_height="200dp" />

                    <AutoCompleteTextView
                        android:id="@+id/activity_company_profile_actvNewTech"
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/activity_company_profile_lvMainTech"
                        android:layout_marginStart="5dp" />

                    <ImageButton
                        android:id="@+id/activity_company_profile_btnAddNewTech"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/activity_company_profile_lvMainTech"
                        android:layout_marginTop="10dp"
                        android:layout_toEndOf="@+id/activity_company_profile_actvNewTech"
                        android:background="@drawable/lblue_add_img" />

                </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


                <Button
                    android:id="@+id/activity_company_profile_btnProjects"
                    style="@style/ButtonStyleBlue"
                    android:layout_width="95dp"
                    android:layout_height="25dp"
                    android:layout_below="@+id/activity_company_profile_mainTechLayout"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="5dp"
                    android:text="Projects" />

            </RelativeLayout>
        </ScrollView>
    </android.support.design.widget.CoordinatorLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:visibility="visible"
        app:headerLayout="@layout/menu_drawer_header" />

</android.support.v4.widget.DrawerLayout>